# KYandexFotkiScreenSaver

./: .gitignore  CMakeLists.txt  KYandexFotki.desktop  README.md
debian/: changelog  control  copyright  rules
src/: CBasePhotoSprite.cpp  CBasePhotoSprite.h  CConfig.cpp  CConfig.h  CFileNames.cpp  CFileNames.h  CHTTP.cpp  CHTTP.h  CLogo.cpp  CLogo.h  CPhotoSpriteLoader.cpp  CPhotoSpriteLoader.h  CSpinner.cpp  CSpinner.h  KYandexFotkiSaver.cpp  KYandexFotkiSaver.h  KYandexFotkiSaverInterface.h  YandexFotkiWidget.cpp  YandexFotkiWidget.h  main.cpp
src/PhotoSprites/: CBaseRectPhotoSprite.cpp  CBaseRectPhotoSprite.h  CFadeRectPhotoSprite.cpp  CFadeRectPhotoSprite.h  CMacEffectPhotoSprite.cpp  CMacEffectPhotoSprite.h  CMosaicPhotoSprite.cpp  CMosaicPhotoSprite.h  CPanoramPhotoSprite.cpp  CPanoramPhotoSprite.h  CWheelClockwisePhotoSprite.cpp  CWheelClockwisePhotoSprite.h
